==> RockySong/micropython-rocky/ports/nxp_rt105/spi.c <==
#define _SPI_C_
#include <stdio.h>
#include <string.h>
#include "py/nlr.h"
#include "py/runtime.h"
#include "py/mphal.h"
#include "extmod/machine_spi.h"
#include "irq.h"
#include "pin.h"
#include "genhdr/pins.h"
#include "bufhelper.h"
#include "spi.h"
#define SPI_INIT_PINS(n) \
	pyb_spi_obj[n].pSSEL = &MICROPY_HW_SPI##n##_NSS; \
	pyb_spi_obj[n].pSCK = &MICROPY_HW_SPI##n##_SCK; \
	pyb_spi_obj[n].pMOSI = &MICROPY_HW_SPI##n##_MOSI; \
	pyb_spi_obj[n].pMISO = &MICROPY_HW_SPI##n##_MISO;

void spi_init0(void) {
	#if !defined(MICROPY_HW_SPI0_NAME)
	pyb_spi_obj[0].pSPI = 0;
	#else
	SPI_INIT_PINS(0);
	#endif

	#if !defined(MICROPY_HW_SPI1_NAME)
	pyb_spi_obj[1].pSPI = 0;
	#else
	SPI_INIT_PINS(1);
	#endif

	#if !defined(MICROPY_HW_SPI2_NAME)
	pyb_spi_obj[2].pSPI = 0;
	#else
	SPI_INIT_PINS(2);
	#endif

	#if !defined(MICROPY_HW_SPI3_NAME)
	pyb_spi_obj[3].pSPI = 0;
	#else
	SPI_INIT_PINS(3);
	#endif

	
	#if !defined(MICROPY_HW_SPI4_NAME)
	pyb_spi_obj[4].pSPI = 0;
	#else
	SPI_INIT_PINS(4);
	#endif

	#if !defined(MICROPY_HW_SPI5_NAME)
	pyb_spi_obj[5].pSPI = 0;
	#else
	SPI_INIT_PINS(5);
	#endif


	#if !defined(MICROPY_HW_SPI6_NAME)
	pyb_spi_obj[6].pSPI = 0;
	#else
	SPI_INIT_PINS(6);
	#endif

	#if !defined(MICROPY_HW_SPI7_NAME)
	pyb_spi_obj[7].pSPI = 0;
	#else
	SPI_INIT_PINS(7);
	#endif

	
	#if !defined(MICROPY_HW_SPI8_NAME)
	pyb_spi_obj[8].pSPI = 0;
	#else
	SPI_INIT_PINS(8);
	#endif


	#if !defined(MICROPY_HW_SPI9_NAME)
	pyb_spi_obj[9].pSPI = 0;
	#else
	SPI_INIT_PINS(9);
	#endif


}

STATIC void spi_set_params(pyb_spi_obj_t *self, int32_t baudrate,
    int32_t polarity, int32_t phase, int32_t bits, int32_t firstbit) 
{
	self->mstCfg.baudRate_Bps = self->mstBaudrate = baudrate;
	self->mstCfg.polarity = !polarity ? kSPI_ClockPolarityActiveHigh : kSPI_ClockPolarityActiveLow;
	self->mstCfg.phase = !phase ? kSPI_ClockPhaseFirstEdge : kSPI_ClockPhaseSecondEdge; 
	self->mstCfg.dataWidth = (spi_data_width_t)(kSPI_Data4Bits + bits - 4);
	self->mstCfg.direction = !firstbit ? kSPI_MsbFirst : kSPI_LsbFirst;
}

void spi_init(pyb_spi_obj_t *self) 
{
    // init the GPIO lines
	gpio_pin_config_t t;
	t.pinDirection = kGPIO_DigitalOutput , t.outputLogic = 1;    
	// we use GPIO to control SSEL
	mp_hal_pin_config(self->pSSEL, GPIO_FILTEROFF | GPIO_MODE_DIGITAL, MP_HAL_PIN_PULL_UP, 0);
	GPIO_PinInit(self->pSSEL->gpio, self->pSSEL->port, self->pSSEL->pin, &t);
	
	mp_hal_pin_config_alt(self->pSCK, GPIO_FILTEROFF | GPIO_MODE_DIGITAL, MP_HAL_PIN_PULL_UP, AF_FN_SPI, self->ndx);
	mp_hal_pin_config_alt(self->pMOSI, GPIO_FILTEROFF | GPIO_MODE_DIGITAL, MP_HAL_PIN_PULL_UP, AF_FN_SPI, self->ndx);
	if (self->pMISO != self->pMOSI) // if we don't use MISO, then set MISO the same pin as MOSI to mark
		mp_hal_pin_config_alt(self->pMISO, GPIO_FILTEROFF | GPIO_MODE_DIGITAL, MP_HAL_PIN_PULL_UP, AF_FN_SPI, self->ndx);
    CLOCK_AttachClk(self->clockSel);

    /* attach 12 MHz clock to FLEXCOMM8 (I2C slave) */
    // CLOCK_AttachClk(kFRO12M_to_FLEXCOMM8);
    /* reset FLEXCOMM for I2C */
    RESET_PeripheralReset(self->resetNdx);

	NVIC_EnableIRQ(self->irqn);
	
	status_t ret = SPI_MasterInit(self->pSPI, &self->mstCfg, 12000*1000);
	if (ret != kStatus_Success) {
		nlr_raise(mp_obj_new_exception_msg(&mp_type_Exception, "SPI master init failed!"));	
	}
}

void spi_deinit(pyb_spi_t ndx) {
	pyb_spi_obj_t *pOb = pyb_spi_obj + ndx;
	SPI_Deinit(pOb->pSPI);
	RESET_PeripheralReset(pOb->resetNdx);
	CLOCK_DisableClock(pOb->myClock);
	NVIC_DisableIRQ(pOb->irqn);
}

void spi_transfer(pyb_spi_t ndx, size_t txLen, const uint8_t *src, size_t rxLen, uint8_t *dest, uint32_t timeout, bool isCtrlSSEL) 
{
    // Note: there seems to be a problem sending 1 byte using DMA the first
    // time directly after the SPI/DMA is initialised.  The cause of this is
    // unknown but we sidestep the issue by using polling for 1 byte transfer.
	spi_transfer_t xfer;
	pyb_spi_obj_t *self = pyb_spi_obj + ndx;
    status_t st = kStatus_Success;

	// first , we send
	if (isCtrlSSEL)
		mp_hal_pin_low(self->pSSEL);
	if (src) {
		xfer.txData = (uint8_t*) src;
		xfer.rxData = 0;
		xfer.dataSize = txLen;
		xfer.configFlags = 0;
		st = SPI_MasterTransferBlocking(self->pSPI, &xfer);
		if (st != kStatus_Success)
			goto cleanup;
	}
	if (dest) {
		xfer.txData = 0;
		xfer.rxData = dest;
		xfer.dataSize = rxLen;
		st = SPI_MasterTransferBlocking(self->pSPI, &xfer);
	}	
cleanup:
	if (isCtrlSSEL)
		mp_hal_pin_high(self->pSSEL);

	if (st != kStatus_Success)
		mp_hal_raise(st);
}

STATIC void spi_print(const mp_print_t *print, pyb_spi_obj_t *self, bool legacy) {
    
    mp_printf(print, "SPI(%u", self->ndx);
    if (self->flags & SPI_OBJ_FLAG_ENABLED) {
        if (self->isMaster) {
            if (legacy) {
                mp_printf(print, ", SPI.MASTER");
            }
            mp_printf(print, ", baudrate=%u kbps", self->mstBaudrate / 1000);
        } else {
            mp_printf(print, ", SPI.SLAVE");
        }
        mp_printf(print, ", polarity=%u, phase=%u, bits=%u", self->mstCfg.polarity, self->mstCfg.phase, self->mstCfg.dataWidth + 1);
        // if (spi->Init.CRCCalculation == SPI_CRCCALCULATION_ENABLED) {
        //    mp_printf(print, ", crc=0x%x", spi->Init.CRCPolynomial);
        // }
    }
    mp_print_str(print, ")");
}

STATIC mp_obj_t pyb_spi_init_helper(pyb_spi_obj_t *self, mp_uint_t n_args, const mp_obj_t *pos_args, mp_map_t *kw_args) {
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_mode,     MP_ARG_REQUIRED | MP_ARG_INT, {.u_int = 0} },	// 0 = master, !0 = slave
        { MP_QSTR_baudrate, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 1000000} },
        { MP_QSTR_polarity, MP_ARG_KW_ONLY | MP_ARG_INT,  {.u_int = 0} },
        { MP_QSTR_phase,    MP_ARG_KW_ONLY | MP_ARG_INT,  {.u_int = 0} },
        { MP_QSTR_bits,     MP_ARG_KW_ONLY | MP_ARG_INT,  {.u_int = 8} },
        { MP_QSTR_firstbit, MP_ARG_KW_ONLY | MP_ARG_INT,  {.u_int = kSPI_MsbFirst} },
		// >>> unsupported/unnessary args, keep for compatibility
        { MP_QSTR_prescaler, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 0xffffffff} },
        { MP_QSTR_dir,      MP_ARG_KW_ONLY | MP_ARG_INT,  {.u_int = 0} },
        { MP_QSTR_nss,      MP_ARG_KW_ONLY | MP_ARG_INT,  {.u_int = 0} },
        { MP_QSTR_ti,       MP_ARG_KW_ONLY | MP_ARG_BOOL, {.u_bool = false} },
        { MP_QSTR_crc,      MP_ARG_KW_ONLY | MP_ARG_OBJ,  {.u_obj = mp_const_none} },
		// <<<
    };
	
    // parse args
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

	pyb_spi_init_c(self->ndx, args);
	
    return mp_const_none;
}

mp_obj_t machine_hard_spi_make_new(const mp_obj_type_t *type, size_t n_args, size_t n_kw, const mp_obj_t *all_args) {
    enum { ARG_id, ARG_baudrate, ARG_polarity, ARG_phase, ARG_bits, ARG_firstbit, ARG_sck, ARG_mosi, ARG_miso };
    static const mp_arg_t allowed_args[] = {
        { MP_QSTR_id,       MP_ARG_OBJ, {.u_obj = MP_OBJ_NEW_SMALL_INT(-1)} },
        { MP_QSTR_baudrate, MP_ARG_INT, {.u_int = 500000} },
        { MP_QSTR_polarity, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 0} },
        { MP_QSTR_phase,    MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 0} },
        { MP_QSTR_bits,     MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = 8} },
        { MP_QSTR_firstbit, MP_ARG_KW_ONLY | MP_ARG_INT, {.u_int = kSPI_MsbFirst} },
        { MP_QSTR_sck,      MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_mosi,     MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL} },
        { MP_QSTR_miso,     MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL} },
    };
    mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
    mp_arg_parse_all_kw_array(n_args, n_kw, all_args, MP_ARRAY_SIZE(allowed_args), allowed_args, args);

    // get static peripheral object
    int spi_id = spi_find(args[ARG_id].u_obj);
    const machine_hard_spi_obj_t *self = &machine_hard_spi_obj[spi_id - 1];

	SPI_MasterGetDefaultConfig(&self->pyb->mstCfg);
	spi_set_params(self->pyb, args[ARG_baudrate].u_int, args[ARG_polarity].u_int, args[ARG_phase].u_int, 
		args[ARG_bits].u_int, args[ARG_firstbit].u_int);  

	if (args[ARG_sck].u_obj != MP_OBJ_NULL)
		self->pyb->pSCK = mp_hal_get_pin_obj(args[ARG_sck].u_obj);
	if (args[ARG_sck].u_obj != MP_OBJ_NULL)
		self->pyb->pMOSI = mp_hal_get_pin_obj(args[ARG_mosi].u_obj);
	if (args[ARG_sck].u_obj != MP_OBJ_NULL)
		self->pyb->pMISO = mp_hal_get_pin_obj(args[ARG_miso].u_obj);

    // init the SPI bus
    spi_init(self->pyb);

    return MP_OBJ_FROM_PTR(self);
}
